[Add]: 2.14.2 作业 1: 实现标签和标签接口去重的判断逻辑.
